update - all - media selection modal: fix layout bug on favourite tab #ref WTHZONE-1060

--- a/src/shared/components/w-media-selection/w-media-selection.component.scss
+++ b/src/shared/components/w-media-selection/w-media-selection.component.scss
@@ -66,7 +66,6 @@
 
 .object-toolbar-view {
   padding: 10px 0;
-  overflow: auto;
 
   .object-toolbar-view-title {
     // padding: 8px;
